docs: record android v2 verification